--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
       rel="stylesheet"
     />
-    <title>Patient Dashboard by Param Shah</title>
+    <title>Patient Dashboard</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
