--- a/public/index.html
+++ b/public/index.html
@@ -45,4 +45,16 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <body>
+    <script>
+      if ('serviceWorker' in navigator) {
+          navigator.serviceWorker.register('%PUBLIC_URL%/firebase-messaging-sw.js')
+          .then(function(registration) {
+            console.log('Registration successful, scope is:', registration.scope);
+          }).catch(function(err) {
+            console.log('Service worker registration failed, error:', err);
+          });
+        }
+    </script>
+  </body>
 </html>
